# dexx

./: .gitignore  Project_Strcuture_Instructions.md  docker-compose.yml  main.py  package.json  pnpm-lock.yaml  pyproject.toml
src/backend/: .gitignore  Dockerfile  README.md  generate_mobula_docs.py  pyproject.toml  pytest.ini  render.yaml  run_aarkus_server.sh
src/backend/app/: main.py
src/backend/app/agent/: agent_flow.md  manager.py  trading_assistant_agent.py
src/backend/app/agent/agents/: planner_agent.py
src/backend/app/agent/agents/crypto_fund_manager/: crypto_fund_manager.py
src/backend/app/agent/agents/crypto_fund_manager/sub_agents/: sub_agents.py
src/backend/app/agent/agents/fund_manager/: fund_manager.py
src/backend/app/agent/agents/fund_manager/sub_agents/: sub_agents.py
src/backend/app/agent/agents/fund_manager/tools/: tools.py
src/backend/app/agent/agents/reporting_agent/: reporting_agent.py
src/backend/app/agent/agents/web_agent/: web_agent.py
src/backend/app/agent/models/: models.py
src/backend/app/agent/utils/: custom_agent_hooks.py  token_output_schema.py
src/backend/app/api/client/: api_client.py
src/backend/app/api/client/coin_gecko/: crypto_api_client.py
src/backend/app/api/client/cryptopanic/: cryptopanic_client.py
src/backend/app/api/client/mobula/: metacore_client.py
src/backend/app/api/client/moralis/: token_api_client.py  wallet_api_client.py
src/backend/app/api/client/openai/: openai_api_client.py
src/backend/app/api/routes/: auth.py  process.py  threads.py
src/backend/app/config/: agent_lore.py  blockchain_networks.json
src/backend/app/context/: wallet_context.py
src/backend/app/core/: config.py
src/backend/app/core/nlp/analyzer/: llm_prompt_analyzer.py
src/backend/app/core/nlp/parser/: chain_extractor.py  keyword_mappings.py
src/backend/app/exceptions/: prompt.py
src/backend/app/lib/: address.py
src/backend/app/lib/config/: logging_config.py
src/backend/app/middleware/: auth_middleware.py
src/backend/app/models/: agent_response.py  auth.py  chains.py  message.py  prompt_analysis.py  response.py  thread.py  token_symbols.py  user.py
src/backend/app/models/api/: routes.py
src/backend/app/services/: auth_service.py  message_service.py  prompt_parsing_service.py  rate_limiter.py  session_service.py  thread_service.py  user_service.py
src/backend/app/services/data_access/: data_access_service.py  redis_service.py
src/backend/app/services/processing/: data_processing_service.py  prompt_processing_service.py
src/backend/app/services/reasoning/: agent_response_service.py  constants.py  insight_service.py  reasoning_service.py  tools_service.py
src/backend/app/services/technical_analysis/: technical_analysis_service.py
src/backend/app/services/utils/: constants.py
src/backend/diagrams/: architecture.py  original_web3_analysis_architecture
src/backend/docs/: program_flow.md  program_flow_diagram.xml
src/backend/scripts/: test.sh
src/backend/testing_anup/: test2.py
src/backend/tests/: conftest.py  test_main.py
src/backend/tests/core/nlp/analyzer/: test_llm_prompt_analyzer.py
src/backend/tests/e2e/: test_auth_flow.py  test_session_flow.py
src/backend/tests/integration/: test_auth_routes.py  test_session_management.py
src/backend/tests/integration/api/client/mobula/: test_metacore_client_integration.py
src/backend/tests/unit/: test_auth_service.py  test_session_service.py  test_tools_service.py
src/backend/tests/unit/api/client/mobula/: test_metacore_client.py
src/backend/tests/unit/core/nlp/parser/: test_keywords_mapping.py
src/backend/tests/unit/core/nlp/parser/test_data/: chain_prompts.py
src/backend/tests/unit/services/: __init__.py
src/backend/tests/unit/services/data_access/: __init__.py  test_data_access_service.py
src/frontend/: README.md  next.config.mjs  package.json  tailwind.config.ts
src/frontend/app/: globals.css  (+1 more)
(+46 files in other folders)
