[project]
name = "token-insights-server"
version = "1.1.0"
description = "Server for exposing token insights from aarkus db"
authors = [{ name = "Harsh Gupta", email = "harshrp94@gmail.com" }]
requires-python = ">=3.10,<3.13"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.6,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "httpx>=0.28.1",
    "openai>=1.71,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "moralis>=0.1.49,<0.2.0",
    "pandas>=2.2.3,<3.0.0",
    "en-core-web-sm",
    "diagrams>=0.24.1,<0.25",
    "python-jose[cryptography]>=3.3.0,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.20,<0.0.21",
    "pydantic[email]>=2.10.6,<3",
    "eth-typing>=5.1.0,<6",
    "eth-utils>=5.2.0,<6",
    "web3>=7.8.0,<8",
    "eth-account>=0.13.5,<0.14",
    "pydantic-settings>=2.7.1,<3",
    "pyjwt>=2.10.1,<3",
    "redis>=5.2.1,<6",
    "fakeredis>=2.26.2,<3",
    "gunicorn>=23.0.0,<24",
    "base58>=2.1.1,<3",
    "pynacl>=1.5.0,<2",
    "numpy>=2.2.3,<3",
    "spacy>=3.8.4,<4",
    "rich>=14.0.0,<15",
    "openai-agents>=0.0.13,<0.0.14",
    "websockets==15.0",
    "solana>=0.36.6,<0.37",
    "uvloop>=0.21.0,<0.22",
]

[project.scripts]
start = "uvicorn app.main:app --reload"

[dependency-groups]
dev = [
    "black>=24.10.0,<25",
    "flake8>=7.1.1,<8",
    "isort>=5.13.2,<6",
    "pytest>=8.3.4,<9",
    "pytest-mock>=3.14.0,<4",
    "requests-mock>=1.12.1,<2",
]
test = [
    "pytest-cov>=4.1.0,<5",
    "pytest-asyncio>=0.25.3,<0.26",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[tool.hatch.build.targets.sdist]
include = ["app"]

[tool.hatch.build.targets.wheel]
include = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
